--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: dist/  # Uploads the dist/ folder
+          passive: true
           server-dir: ${{ secrets.FTP_TARGET_DIR }}  # Typically `/httpdocs/`
           exclude: |
             **/.git*
